fixed dropdown & jump to year in timeline

--- a/education/src/style/Button.css
+++ b/education/src/style/Button.css
@@ -18,7 +18,7 @@ button {
     display: inline-block;
     margin-top: 15px;
     margin-bottom: 15px;
-    width: 25%;
+    width: 30%;
     -webkit-appearance: none;
     font-size: 0.8em;
 }    .select select {
